# toxic-comments-detector

./: .gitignore  README.md  requirements.txt
code/: .env.example  .gitignore  README.md  pyproject.toml
code/data/: test_toxic_comments.jsonl  test_toxic_comments_cleaned.jsonl  test_toxic_comments_garbage.jsonl  train_toxic_comments.jsonl  train_toxic_comments_cleaned.jsonl  train_toxic_comments_garbage.jsonl  valid_toxic_comments.jsonl  valid_toxic_comments_cleaned.jsonl  valid_toxic_comments_garbage.jsonl
code/docs/数据清洗/: cleaner.md
code/eval_results/: evaluation_report.json
code/main/: eval.py  inference.py  train.py
code/scripts/: data_cleaner.py  data_generator.py  multi_dataset_stats.py
frontend/: README.md  app.py  test_demo.html  test_model.py
frontend/templates/: about.html  detect.html  home.html
server/: app.py  inference.py  run_api.py
